--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -52,10 +52,13 @@
             border-radius: 3px;
         }
 
-        &:hover {
-            color: $secondary;
-            border-bottom: 1px solid $secondary;
+        @include desktop {
+            &:hover {
+                color: $secondary;
+                border-bottom: 1px solid $secondary;
+            }
         }
+
     }
 
     &__board {
@@ -80,10 +83,10 @@
         width: 360px;
         height: 360px;
         overflow: hidden;
-        transition: transform 0.3s ease-in-out;
+        transition: box-shadow 0.3s ease-in-out;
 
         &:focus {
-            transform: scale(1.1);
+            box-shadow: 0 0 5px 2px rgba(35, 82, 222, 0.7);
         }
 
         @include r(1200) {
@@ -111,8 +114,10 @@
             object-fit: cover;
             transition: transform 0.5s ease-in-out;
 
-            &:hover {
-                transform: scale(1.3);
+            @include desktop {
+                &:hover {
+                    transform: scale(1.3);
+                }
             }
         }
     }
@@ -130,9 +135,13 @@
             box-shadow: 0px 0px 0px 3px rgba(35, 82, 222, 0.5);
         }
 
-        &:hover {
-            background-color: $bg;
-            color: $secondary;
+
+
+        @include desktop {
+            &:hover {
+                background-color: $bg;
+                color: $secondary;
+            }
         }
 
         &:active {
